<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vitalism Solution</string>
    <string name="web_client_id">1016766472347-uglj539kv87cc3ere5onqr02uce5g7m2.apps.googleusercontent.com</string>
    <string name="facebook_app_id">686979636556168</string>
    <string name="fb_login_protocol_scheme">fb686979636556168</string>
    <string name="facebook_client_token">56789</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_60">60</string>
    <string name="lbl_m">M</string>
    <string name="msg_miglitol_glyse">Miglitol (Glyset) Tablets</string>
    <string name="msg_simply_position">Simply position your face inside the frame before starting the video shooting and make sure your face within the designed area and not too far away</string>
    <string name="msg_position_yourse">Position yourself comfortably in front of your cell phone\u2019s frontal camera and make sure to hold still while capturing the video</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="lbl_s">S</string>
    <string name="lbl_t">T</string>
    <string name="msg_avoid_any_light">Avoid any light source (sunlight- lamp) behind you but they can be in front of you</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_menna_mahmoud">Menna Mahmoud</string>
    <string name="lbl_w">W</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_y">y</string>
    <string name="msg_log_in_with_fac">LogIn with Facebook</string>
    <string name="msg_heart_rate_vari">Heart Rate Variability</string>
    <string name="msg_bp_200_mg_300"> BP 200 mg / 300 mg, Non prescription, Treatment: Iron Deficiency</string>
    <string name="msg_ferrous_sulphat">Ferrous Sulphate Tablets</string>
    <string name="msg_today_my_heart">Today my heart rate is 70</string>
    <string name="msg_login_wit_touch">Login wit touch ID</string>
    <string name="msg_a_normal_restin">A normal resting heart rate for adults ranges from 60 to 100 beats per minute......</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_clear_all">Clear all</string>
    <string name="lbl_9_24">9:24</string>
    <string name="msg_check_adam_s_vi">Check Adam\u2019s Vital Signs</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_a">A+</string>
    <string name="lbl_f">F</string>
    <string name="lbl_sohag">Sohag</string>
    <string name="lbl_your_result">Your Result</string>
    <string name="msg_pulse_respirati">Pulse-Respiration
 Quotient (PRQ)</string>
    <string name="lbl_gender">Gender</string>
    <string name="msg_previous_measur">Previous measurement of your vital signs</string>
    <string name="lbl_details">Details</string>
    <string name="msg_please_do_not_c">Please do not cover your forehead with hair, do not talk or looking to the side, do not wear mask while capturing the readings</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_adam_mahmoud">Adam Mahmoud</string>
    <string name="msg_please_fill_the">Please fill the details and create account</string>
    <string name="msg_adjust_your_fac">Adjust your face&#13;
within the frame</string>
    <string name="lbl_password">Password</string>
    <string name="msg_r_s_h">Rᴇsʜᴀᴘɪɴɢ Hᴇᴀʟᴛʜᴄᴀʀᴇ ᴡɪᴛʜ Dɪɢɪᴛᴀʟ Sᴏʟᴜᴛɪᴏɴ</string>
    <string name="lbl_17_november">17 November</string>
    <string name="lbl_01_26">01:26</string>
    <string name="lbl_read_more2">Read More</string>
    <string name="msg_measure_your_he">Measure your heart rate</string>
    <string name="msg_heart_rate_als">
        "Heart rate (or pulse rate) is the frequency of the heartbeat measured by the number of contractions of the heart per minute
(beats per minute, or bpm). The heart rate can vary according to the body's physical needs, including the need to absorb
oxygen and excrete carbon dioxide,
A normal resting heart rate for adults ranges from 60 to 100 beats per minute.
Generally, a lower heart rate at rest implies more efficient heart function and better cardiovascular fitness.
For example, a well-trained athlete might have a normal resting heart rate closer to 40 beats per minute.
Keep in mind that many factors can influence heart rate, including:
Age
Fitness and activity levels
Being a smoker
Having cardiovascular disease, high cholesterol or diabetes
Air temperature
Body position (standing up or lying down, for example)
Emotions
Body size
Medications
Although there's a wide range of normal, an unusually high or low heart rate may indicate an underlying problem.
Consult your doctor if your resting heart rate is consistently above 100 beats a minute (tachycardia) or if you're not
a trained athlete and your resting heart rate is below 60 beats a minute (bradycardia) — especially if you have other
signs or symptoms, such as fainting, dizziness or shortness of breath.
"</string>
    <string name="msg_pick_the_perfec">Pick the Perfect&#13;
Spot in the room&#13;</string>
    <string name="msg_ourdaily_calciu">Ourdaily Calcium &amp; Vitamin D3</string>
    <string name="lbl_sun_12_40pm">Sun,12:40pm</string>
    <string name="lbl_20">20</string>
    <string name="lbl_mon_11_50pm">Mon,11:50pm</string>
    <string name="lbl_23">23</string>
    <string name="lbl_hi_mahmoud">Hi Mahmoud !!</string>
    <string name="lbl_age">Age</string>
    <string name="msg_log_in_with_goo">Log In with Google</string>
    <string name="lbl_last_heart_rate">Last Heart
rate</string>
    <string name="msg_date_of_last_me">Date of last measurement </string>
    <string name="msg_search_for_vita">Search for Vitalism\u2019s user</string>
    <string name="msg_the_user_has_be">The user has been verified</string>
    <string name="msg_a_normal_pulse">A normal pulse oximeter reading for your oxygen saturation level is between 95% and 100%........</string>
    <string name="msg_heart_rate_als2">"Heart rate, also known as pulse, is the number of times a person's heart beats per minute. It is a vital sign that is used to indicate a person's overall health status. A normal heart rate is between 60 and 100 beats per minute, however this can vary depending on factors such as age, sex, and activity level.&#13;
Heart rate is an important indicator of cardiovascular health. A heart rate that is consistently above or below the normal range may be a sign of an underlying medical condition such as heart disease or thyroid problems. A high heart rate, known as tachycardia, may be caused by conditions such as anxiety or anemia. A low heart rate, known as bradycardia, may be caused by conditions such as hypothyroidism or certain medications.&#13;
Heart rate can be easily measured by feeling the pulse on the wrist or neck, or using a Vitalism system. It is an important vital sign that should be regularly monitored, particularly for people with known heart conditions or risk factors for heart disease. By monitoring heart rate, healthcare providers can detect potential problems early and take steps to prevent or manage them......"</string>
    <string name="lbl_857">$857/</string>
    <string name="lbl_13">13</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_archieved">Archieved</string>
    <string name="msg_30_november_202">30 November 2022</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_mahmoudalyosify">mahmoudalyosify</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_15">15</string>
    <string name="lbl_resend_code_to">Resend code to</string>
    <string name="lbl_18">18</string>
    <string name="msg_mahmoud_measure">Mahmoud measured his respiratory rate using Vitalism at 11:36 am on 11-23-2022 and the result was 20 BPM.</string>
    <string name="lbl_19">19</string>
    <string name="msg_sign_up_with_go">Sign Up with Google</string>
    <string name="lbl_otp_code">OTP Code</string>
    <string name="msg_your_grandmothe">Your grandmother</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_dr_ali_hussein">Dr.Ali Hussein</string>
    <string name="msg_check_your_emai">Check your email</string>
    <string name="lbl_20_bpm">20 BPM</string>
    <string name="msg_i_m_vitalism_s">I\u2019m Vitalism\u2019s bot!
Thank you for agreeing to follow Mahmoud Sayed Youssef and see his vital signs</string>
    <string name="msg_last_respirator">Last respiratory rate</string>
    <string name="msg_otp_verificatio">OTP Verification</string>
    <string name="lbl_sign_up_now">Sign up now</string>
    <string name="msg_you_can_now_est">You can now estimate vital signs contactless using real-time video</string>
    <string name="lbl_prq">(PRQ)</string>
    <string name="msg_healthy_and_unh">Healthy and unhealthy blood pressure ranges ; 120 \u2013 129, and, LESS THAN 80 ; 130 \u2013 139, or, .....</string>
    <string name="lbl_messages">Messages</string>
    <string name="msg_your_respirator">Your respiratory rate

is 20 bpm</string>
    <string name="msg_sign_up_with_fa">Sign Up with Facebook</string>
    <string name="msg_caregivers_can">caregivers can see your result</string>
    <string name="msg_your_grandfathe">Your grandfather Youssef\u2019s heart rate is 65</string>
    <string name="lbl_recent">Recent</string>
    <string name="msg_enter_your_emai">Enter your email account to reset  your password</string>
    <string name="msg_version_of_vita">Version of Vitalism</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_moataz_kayed">Moataz Kayed</string>
    <string name="msg_your_medication">Your Medication Schedule</string>
    <string name="msg_23_november_202">23 November 2022</string>
    <string name="lbl_none">None</string>
    <string name="msg_mahmoud_alyosif">Mahmoud Alyosify</string>
    <string name="lbl_23_11_2022">23/11/2022</string>
    <string name="msg_mahmoud_sayed_y">Mahmoud Sayed Youssef</string>
    <string name="lbl_assiut">Assiut</string>
    <string name="msg_password_must">Password must be more than 8 character</string>
    <string name="msg_password_must_b">Password must be more than 8 character and contain small and large character , numbers and special character</string>
    <string name="msg_measure_hemoglo">Measure hemoglobin, hemoglobin A1C, and cholesterol total (under research)...</string>
    <string name="msg_by_signing_in_y">By signing in you are agreeing our Term and privacy policy</string>
    <string name="msg_respiratory_rat2">respiratory rate condition</string>
    <string name="lbl_761_person">$761/Person</string>
    <string name="lbl_sat_10_56pm">Sat,10:56pm</string>
    <string name="lbl_user_name2">User name</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="msg_mahmoudalyosify">mahmoudalyosify@gmail.com</string>
    <string name="lbl_forget_password">Forget password</string>
    <string name="lbl_1">1</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="skip">Skip</string>
    <string name="help_us_to_know_u">help us to know you</string>
    <string name="users">Users</string>
    <string name="emr">Emr</string>
</resources>