<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_28sdp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearRowone2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1pxv"
        android:layout_weight="0.46"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtOne"
            style="@style/txtMulishmuliregular16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            tools:text="@string/lbl_1" />

        <TextView
            android:id="@+id/txtUsername"
            style="@style/txtLatoregular16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_weight="0.9"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_1pxh"
            android:singleLine="true"
            tools:text="@string/lbl_username" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMahmoudalyosifyOne"
        style="@style/txtLatoregular16_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_132pxh"
        android:layout_marginTop="@dimen/_1pxv"
        android:layout_weight="0.54"
        android:ellipsize="end"
        android:lineSpacingExtra="@dimen/_1pxh"
        android:singleLine="true"
        tools:text="@string/lbl_mahmoudalyosify" />

</androidx.appcompat.widget.LinearLayoutCompat>